tests/NormalTests/paczka1/fuzzy1/34461005.err
Error in line 14: D72av S726 94,4
Error in line 28: VjIMPz3tZcr A988 75,3
Error in line 37: VjIMPz3tZcr A988 41,2
